--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -91,8 +91,8 @@ dependencies {
     implementation 'com.github.irshulx:laser-native-editor:2.3.1'
     implementation 'com.facebook.android:account-kit-sdk:4.+'
     implementation 'com.github.linger1216:labelview:v1.1.2'
-    implementation 'com.googlecode.mp4parser:isoparser:1.1.21'
-    implementation 'com.google.android.exoplayer:exoplayer:r2.5.1'
+    implementation 'com.googlecode.mp4parser:isoparser:1.1.20'
+    implementation 'com.google.android.exoplayer:exoplayer:2.7.3'
     implementation 'io.branch.sdk.android:library:3.+'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
