--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -33,7 +33,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
-    !-- Maps API needs OpenGL ES 2.0. -->
+    <!-- Maps API needs OpenGL ES 2.0. -->
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
@@ -82,7 +82,7 @@
                 <action android:name="com.android.vending.INSTALL_REFERRER" />
             </intent-filter>
         </receiver>
-        -->
+
         <activity
             android:name=".filechooser.com.ipaulpro.afilechooser.FileChooserActivity"
             android:enabled="@bool/use_activity"
@@ -208,7 +208,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:scheme="@string/fb_login_protocol_scheme"
+                <data
+                    android:scheme="@string/fb_login_protocol_scheme"
                     tools:ignore="ManifestResource" />
             </intent-filter>
         </activity>
@@ -365,6 +366,9 @@
             android:name=".ui.activity.ArticleListingActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".ui.activity.ArticleDetailsContainerActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".ui.activity.CityBestArticleListingActivity"
             android:screenOrientation="portrait" />
         <activity
@@ -405,7 +409,7 @@
             android:name=".ui.activity.AppSettingsActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.activity.ArticleDetailsContainerActivity"
+            android:name=".ui.rewards.activity.RewardsContainerActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|layoutDirection"
             android:screenOrientation="portrait" />
         <activity
@@ -456,7 +460,7 @@
         <activity
             android:name=".ui.activity.GroupSettingsActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.activity.LeaveGroupActivity" />q
+        <activity android:name=".ui.activity.LeaveGroupActivity" />
         <activity android:name=".ui.activity.EditGroupActivity" />
         <activity
             android:name=".ui.activity.AddShortStoryActivity"
@@ -546,6 +550,9 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.HeaderChallengeVideoPlayActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.videochallengenewui.activity.NewVideoChallengeActivity"
             android:screenOrientation="portrait" />
 
         <meta-data
@@ -653,11 +660,6 @@
             </intent-filter>
         </receiver>
 
-         <activity android:name=".ui.rewards.activity.RewardsContainerActivity">
-             <!--<intent-filter>-->
-                 <!--<action android:name="android.intent.action.MAIN" />-->
-                 <!--<category android:name="android.intent.category.LAUNCHER" />-->
-             <!--</intent-filter>-->
-         </activity>
+
     </application>
 </manifest>
