--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.1'
 
     implementation 'com.android.support:design:25.3.0'
+    implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:25.3.0'
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'com.android.volley:volley:1.0.0'
@@ -84,7 +85,7 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:4.38.1'
     implementation 'com.facebook.android:audience-network-sdk:5.1.0'
     implementation 'com.shuhart.bubblepagerindicator:bubblepagerindicator:1.0.13'
-    implementation 'com.mixpanel.android:mixpanel-android:5.+'
+    implementation 'com.mixpanel.android:mixpanel-android:5.5.0'
     implementation 'com.facebook.fresco:fresco:1.10.0'
     implementation 'com.github.stfalcon:frescoimageviewer:0.5.0'
     implementation 'com.github.florent37:diagonallayout:1.0.9'
