--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -175,7 +175,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
         debug {
-            buildConfigField 'String', 'GROUPS_LIVE_URL', '"http://35.200.233.99:3030/"'
+            buildConfigField 'String', 'GROUPS_LIVE_URL', '"https://groups.momspresso.com/"'
             minifyEnabled false
             shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
