--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -50,7 +50,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.google.firebase:firebase-storage:16.0.1'
     implementation 'com.google.firebase:firebase-auth:16.0.1'
-
     implementation 'com.android.support:design:27.3.0'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:27.3.0'
@@ -102,7 +101,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.4.1'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     compile 'com.github.douglasjunior:android-simple-tooltip:0.2.2'
-
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
 
@@ -175,7 +173,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
         debug {
-            buildConfigField 'String', 'GROUPS_LIVE_URL', '"http://35.200.233.99:3030/"'
+            buildConfigField 'String', 'GROUPS_LIVE_URL', '"https://groups.momspresso.com/"'
             minifyEnabled false
             shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
