--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -295,6 +295,9 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
+            android:name=".ui.activity.RewardCampaignActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".ui.activity.AutoSuggestTransparentDialogActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Transparent"
