code base made stable using ifc2b62 commit

--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -671,6 +671,10 @@
             </intent-filter>
         </receiver>
 
+        <activity android:name=".ui.campaign.activity.CampaignContainerActivity"
+                   android:windowSoftInputMode="stateAlwaysHidden|adjustResize">
+                </activity>
+
 
         <!--   <activity
                android:name=".ui.rewards.activity.RewardsContainerActivity"
