--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -93,7 +93,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     implementation 'com.squareup.okhttp3:okhttp:3.4.1'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
-    compile 'com.github.douglasjunior:android-simple-tooltip:0.2.2'
+    implementation 'com.github.douglasjunior:android-simple-tooltip:0.2.2'
     implementation 'org.greenrobot:eventbus:3.1.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
