--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -164,7 +164,7 @@ android {
 
         }
         debug {
-            buildConfigField 'String', 'GROUPS_LIVE_URL', '"https://groups.momspresso.com/"'
+            buildConfigField 'String', 'GROUPS_LIVE_URL', '"http://35.200.233.99:3030/"'
             minifyEnabled false
             shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
