--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -95,6 +95,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.github.douglasjunior:android-simple-tooltip:0.2.2'
     implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'com.github.nkzawa:socket.io-client:0.6.0'
+    compile ('io.socket:socket.io-client:0.8.3') {
+        exclude group: 'org.json', module: 'json'
+    }
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
 
