popup menu for edit vlog + localization changes

--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -469,7 +469,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.UserPublishedContentActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/EditorTheme" />
         <activity
             android:name=".ui.activity.UserDraftsContentActivity"
             android:screenOrientation="portrait" />
