--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.mycity4kids"
     android:versionCode="169"
-    android:versionName="12.1.6">
+    android:versionName="12.1.7">
 
     <uses-sdk tools:overrideLibrary="io.branch.referral, com.crashlytics.android, im.ene.toro.exoplayer, im.ene.toro,com.facebook.shimmer,org.wordpress.android.editor" />
     <!-- So that we can get the account name -->
@@ -489,12 +489,14 @@
             android:theme="@style/EditorTheme" />
         <activity
             android:name=".ui.activity.CategoryVideosListingActivity"
+            android:parentActivityName=".ui.activity.DashboardActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.ChallnegeDetailListingActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.ChooseVideoCategoryActivity"
+            android:parentActivityName=".ui.activity.DashboardActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.VideoChallengeDetailListingActivity"
@@ -504,6 +506,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.videochallengenewui.activity.NewVideoChallengeActivity"
+            android:parentActivityName=".ui.activity.CategoryVideosListingActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.UserReadArticlesContentActivity"
@@ -521,6 +524,7 @@
             android:theme="@style/EditorTheme" />
         <activity
             android:name=".ui.campaign.activity.CampaignContainerActivity"
+            android:parentActivityName=".ui.activity.DashboardActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
