--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.mycity4kids"
-    android:versionCode="171"
-    android:versionName="12.1.8">
+    android:versionCode="172"
+    android:versionName="12.1.9">
 
     <uses-sdk tools:overrideLibrary="io.branch.referral, com.crashlytics.android, im.ene.toro.exoplayer, im.ene.toro,com.facebook.shimmer,org.wordpress.android.editor" />
     <!-- So that we can get the account name -->
@@ -532,6 +532,10 @@
         <activity
             android:name=".ui.activity.CustomSignUpActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.campaign.activity.CampaignHowToVideoActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Transparent" />
 
         <meta-data
             android:name="io.branch.sdk.BranchKey"
