--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -541,19 +541,10 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Transparent" />
         <activity
-            android:name=".ui.activity.BadgeActivity"
+            android:name=".profile.R_PrivateProfileActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.activity.ProfileSetting"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".ui.activity.NotificationProfileSetting"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".ui.activity.ReportSpamActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".ui.activity.FeaturedOnActivity"
+            android:name=".profile.MainActivity1"
             android:screenOrientation="portrait" />
 
         <meta-data
