--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -42,6 +42,7 @@
         tools:replace="android:allowBackup">
         <activity
             android:name=".ui.rewards.activity.RewardsShareReferralCodeActivity"
+
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.mymoneytracker.activity.TrackerActivity"
@@ -90,11 +91,11 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/transparent_status">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+              <intent-filter>
+                  <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+                  <category android:name="android.intent.category.LAUNCHER" />
+              </intent-filter>
 
             <!-- The following intent filter is added to provide deep linking to the MC4K app -->
             <intent-filter android:autoVerify="true">
@@ -357,6 +358,7 @@
             android:configChanges="orientation|keyboardHidden|screenSize|layoutDirection"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
+
         <activity
             android:name=".ui.activity.RankingActivity"
             android:screenOrientation="portrait"
@@ -571,6 +573,16 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".ui.videochallengenewui.activity.ExoplayerVideoChallengePlayViewActivity" />
+        <activity android:name=".ui.activity.collection.CollectionsActivity">
+         <!--   <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>-->
+        </activity>
+        <activity android:name=".ui.activity.UserCollectionItemListActivity" />
+        <activity android:name=".ui.activity.collection.UserCollectionItemListActivity" />
+        <activity android:name=".ui.activity.collection.AddCollectionActivity" />
 
         <receiver android:name=".reminders.CancelNotificationReceiver" />
 
