--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -543,6 +543,9 @@
             android:name=".profile.R_PrivateProfileActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".profile.M_PrivateProfileActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".profile.MainActivity1"
             android:screenOrientation="portrait" />
 
