--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -581,7 +581,7 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".ui.videochallengenewui.activity.ExoplayerVideoChallengePlayViewActivity" />
-        <activity android:name=".ui.activity.collection.CollectionsActivity"/>
+        <activity android:name=".ui.activity.collection.CollectionsActivity"></activity>
         <activity
             android:name=".ui.activity.collection.UserCollectionItemListActivity"
             android:theme="@style/EditorTheme" />
