--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.mycity4kids"
-    android:versionCode="174"
-    android:versionName="12.3.1.1">
+    android:versionCode="176"
+    android:versionName="12.3.1.2">
 
     <uses-sdk tools:overrideLibrary="io.branch.referral, com.crashlytics.android, im.ene.toro.exoplayer, im.ene.toro,com.facebook.shimmer,org.wordpress.android.editor" />
     <!-- So that we can get the account name -->
@@ -581,6 +581,7 @@
             android:name=".ui.activity.collection.EditCollectionActivity"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".ui.activity.BadgeActivity" />
+        <activity android:name=".ui.activity.NotificationProfileSetting" />
 
         <receiver android:name=".reminders.CancelNotificationReceiver" />
 
